# cAndC-

./: CMakeLists.txt  array_pointer.c  main.cpp
demoC/: arrayToPointer.c  arraycopy.c  arraycopy.h  const.c  deleteSpace.c  deleteSpace.h  fileOperation.c  findStr.c  localVariableStaticAll.c  mallocAndMemFun.c  printEvery.c  sizeof.c  strCharArrayChange.c  stringmethod.c  structAll.c  structAll.h  swap.c  swap.h
demoC++/: Stud.cpp  Stud.h  constReference.cpp  define.cpp  emun.cpp  functionBackYinYong.cpp  method.cpp  namespace.cpp  namespace.h  oop.cpp  pointer.cpp  yinYongInC++.cpp
