cmake_minimum_required(VERSION 3.13)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp array_pointer.c demoC/swap.c demoC/swap.h demoC/arraycopy.c demoC/arraycopy.h demoC/deleteSpace.c demoC/deleteSpace.h demoC/sizeof.c demoC/printEvery.c demoC/arrayToPointer.c demoC/const.c demoC/findStr.c demoC/stringmethod.c demoC/localVariableStaticAll.c demoC/extern/externEvery.c demoC/extern/externEvery.h demoC/extern/externEvery2.c demoC/extern/externEvery2.h demoC/mallocAndMemFun.c demoC/strCharArrayChange.c demoC/structAll.c demoC/fileOperation.c demoC/structAll.h demoC++/namespace.cpp demoC++/namespace.h demoC++/emun.cpp demoC++/yinYongInC++.cpp)